WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310017
MediaStreamTrack may have wrong settings if source settings change while track is transferred
https://bugs.webkit.org/show_bug.cgi?id=310017
Summary
MediaStreamTrack may have wrong settings if source settings change while trac...
youenn fablet
Reported
2026-03-16 06:39:00 PDT
MediaStreamTrack may have wrong settings if source settings change while track is transferred
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-16 06:39:11 PDT
<
rdar://problem/172657570
>
youenn fablet
Comment 2
2026-03-16 09:19:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60702
EWS
Comment 3
2026-03-17 23:22:16 PDT
Committed
309458@main
(c7f5f3f3145e): <
https://commits.webkit.org/309458@main
> Reviewed commits have been landed. Closing PR #60702 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug