MediaStreamTrack may have wrong settings if source settings change while track is transferred rdar://172657570 https://bugs.webkit.org/show_bug.cgi?id=310017

Reviewed by Jean-Yves Avenard.

When transferring a track, we take a snapshot of settings, that is used to initialize the track created from the transfer.
That track is then registering to the source to get updates on settings changes.
If settings change between the start of the transfer and the end of the transfer, the track will not be notified of those changes.

To fix that issue, we keep track in RealtimeMediaSource and MediaStreamTrackPrivate of a counter of settings change.
Whenever settings change, RealtimeMediaSource increments its counter and notifies its observer, including MediaStreamTrackPrivate that will update its counter as well.

Whenever transferring, we store the current counter and initialize the newly created MediaStreamTrackPrivate counter with that counter.
When registering the MediaStreamTrackPrivate to the source, in  MediaStreamTrackPrivateSourceObserverSourceProxy::initialize, we compare the track and source counters.
If they do not match, we automatically update the MediaStreamTrackPrivate settings.

Covered by added test.

Canonical link: https://commits.webkit.org/309458@main